Fix main action button alignment for Firefox

--- a/resources/sass/site2.scss
+++ b/resources/sass/site2.scss
@@ -113,6 +113,9 @@ header {
     position: absolute;
     right: $margin-page;
     bottom: -27px;
+    > i {
+      align-self: center;
+    }
   }
 }
 
